pages/Trainer-waiver/waiver.css
.black-bar{
    height: 50px;
    background-color: var(--accent-color);
    width: 100%;
    margin-top: -10px;
}

nav{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100px;
    background-color: var(--heading-color);
    box-shadow: 0 5px 10px rgb(171, 171, 171);;
}

ul li {
    display: inline;
    padding: 0 20px;
    list-style-type: none;
    font-weight: 700;
}

.waiver-wrapper{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background-color: var(--background-color);
}

.waiver-header{margin-bottom: 40px;}

.waiver-header h1, 
.waiver-header h2 {color: var(--text-color);}

.waiver-header h1{margin: 50px;}
.waiver-header h2{margin-top: -40px;}

.waiver-header p {
    font-weight: 700;
    margin-left: 130px;
}

.terms{
    width: 70%;
}

.terms p {
    margin: 0 175px;
    width: 60%;
    font-size: 16px;
    margin-bottom: 70px;
}

.terms ol {
    margin: 0 150px 0 180px;
    width: 50%;
}

.form{
    background-color: var(--secondary-color);
    color: var(--heading-color);
}

.form .form-header {
    width: 60%;
    padding-top: 20px;
    padding-top: 60px;
    font-size: 20px;
    text-align: center;
    margin: 0 240px 50px 240px;
}

.form-info{
    display: flex;
    align-items: center;
    justify-content: center;
}

.form-info input{
    padding: 10px;
}

.form-info {
    margin-bottom: 30px;
    font-style: italic;
}

.last .calendar{
    color: var(--primary-color);
    position: relative;
    right: 35px;
    z-index: 2;
    top: 8px;
}

.phone{margin-top: 18px;}

.waiver-box{
    display: flex;
    width: 50%;
    align-items: center;
    justify-content: center;
    gap: 10px;
    margin: 0 300px;
    text-align: justify;
}

